--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@ body {
 
       <div class="contact-item">
         <strong>Instagram:</strong>
-        <a href="https://www.instagram.com/rithesh_shetty_/" target="_blank">@itx_blue_flame</a>
+        <a href="https://www.instagram.com/itx_blue_flame?utm_source=ig_web_button_share_sheet&igsh=MW1paGdydGV3M3E3dA==" target="_blank">@itx_blue_flame</a>
       </div>
 
       <div class="contact-item">
