--- a/index.html
+++ b/index.html
@@ -806,27 +806,75 @@ body {
 
       <div class="video-card" style="transform: rotateY(0deg) translateZ(500px);">
         <img src="static/r.png" class="video-thumb" />
-        <video preload="metadata" src="static/videos/ronaldo.mp4" muted></video>
+        <video 
+          preload="metadata" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183359/ronaldo_d9rzgv.mp4" 
+          muted 
+          autoplay 
+          loop 
+          playsinline>
+        </video>
+
       </div>
       <div class="video-card" style="transform: rotateY(60deg) translateZ(500px);">
         <img src="static/zoro.png" class="video-thumb" />
-        <video preload="metadata" src="static/videos/final zoro.mp4" muted></video>
+        <video 
+          preload="metadata" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183376/final_zoro_bnrkqz.mp4" 
+          muted 
+          autoplay 
+          loop 
+          playsinline>
+        </video>
+
       </div>
       <div class="video-card" style="transform: rotateY(120deg) translateZ(500px);">
         <img src="static/youtube thumbnail.png" class="video-thumb" />
-        <video preload="metadata" src="static/videos/naa ready insta reel .mp4" muted></video>
+        <video 
+          preload="metadata" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183072/naa_ready_insta_reel_gcfqls.mp4" 
+          muted 
+          autoplay 
+          loop 
+          playsinline>
+        </video>
+
       </div>
       <div class="video-card" style="transform: rotateY(180deg) translateZ(500px);">
         <img src="static/thumbnail.png" class="video-thumb" />
-        <video preload="metadata" src="static/videos/final new avengers.mp4" muted></video>
+        <video 
+          preload="metadata" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183456/final_new_avengers_nrwmxr.mp4" 
+          muted 
+          autoplay 
+          loop 
+          playsinline>
+        </video>
+
       </div>
       <div class="video-card" style="transform: rotateY(240deg) translateZ(500px);">
         <img src="static/v.png" class="video-thumb" />
-        <video preload="metadata" src="static/videos/virat 2.mp4" muted></video>
+        <video 
+          preload="metadata" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183409/virat_2_jqnekk.mp4" 
+          muted 
+          autoplay 
+          loop 
+          playsinline>
+        </video>
+
       </div>
       <div class="video-card" style="transform: rotateY(300deg) translateZ(500px);">
         <img src="static/w.png" class="video-thumb" />
-        <video preload="metadata" src="static/videos/random final.mp4" muted></video>
+        <video 
+          preload="metadata" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183483/random_final_p6ebvu.mp4" 
+          muted 
+          autoplay 
+          loop 
+          playsinline>
+        </video>
+
       </div>
     </div>
   </div>
