--- a/index.html
+++ b/index.html
@@ -868,12 +868,13 @@ body {
         <img src="static/w.png" class="video-thumb" />
         <video 
           preload="metadata" 
-          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/f_auto,q_auto/v1755183483/random_final_p6ebvu.mp4" 
+          src="https://res.cloudinary.com/dw3gxbtfm/video/upload/v1755187038/randomnew_ztkvnj.mp4" 
           muted 
           autoplay 
           loop 
           playsinline>
         </video>
+
 
       </div>
     </div>
